Fix secondary text colour in dark mode

--- a/_sass/styles-dark.scss
+++ b/_sass/styles-dark.scss
@@ -4,7 +4,7 @@ a, a:active, a:visited, a:hover {
 	color: $link-color-dark;
 }
 
-.text-muted {
+.text-muted, .text-secondary {
 	color: $text-muted-dark !important;
 }
 
